syntax = "proto3";
option go_package = "github.com/Shubhacker/cloudbees";

message CreatePostRequest{
    string Title =1;
    string Content =2;
    string Author =3;
    repeated string Tags =4;
}

message PostResponse{
    string PostId =1;
    string Title =2;
    string Content=3;
    string Author =4;
    string PublicationDate =5;
    repeated string Tags =6;
}

message ReadPostRequest{
    string PostId =1;
}

message updatePostRequest{
    string PostId =1;
    string Title =2;
    string Content =3;
    string Author =4;
    repeated string Tags =5;
}

message DeletePostRequest{
    string PostId =1;
}

message DeletePostResponse{
    string IsDeleted =1;
}

service Invoicer {
    rpc CreatePost(CreatePostRequest) returns (PostResponse);
    rpc ReadPost(ReadPostRequest) returns (PostResponse);
    rpc UpdatePost(updatePostRequest) returns (PostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}